<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username"
            android:layout_gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_weight="0.5"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/endorseButton"
            android:background="#2b4866"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/thumbs_up" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/professor_name2"
            android:textSize="10dp"
            android:layout_weight="0.5"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/prof"
            android:layout_gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:layout_weight="0.5"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="10dp"
            android:layout_weight="0.5"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <RatingBar
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:textColor="@color/white"
                android:text="TextView" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gradeGiven"
            android:textSize="10dp"
            android:layout_weight="0.5"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/grade"
            android:layout_gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:layout_weight="0.5"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratingText"
            android:textSize="10dp"
            android:layout_weight="0.5"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/rating"
            android:layout_gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:layout_weight="0.5"
            android:textColor="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/userOverview"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        style="@style/Widget.AppCompat.Button.Small"
        android:text="@string/userOverview" />

</LinearLayout>